JO-2008-08-07-0: Enhancem.:   Updated files in www directory for sunsource.net
                 Review:      AP

JO-2008-08-05-0: RFE:         ARCo should support SJWC 3.1
                 Bugster:     6733626
                 Issue:       2683
                 Review:      AP

MD-2008-07-31-0: CVS:       Created V62_TAG
-------------------------------------------

JO-2008-07-28-0: Enhancem.:   Updated files in www directory for sunsource.net
                 Review:      AP

JO-2008-07-24-0: Bugfix:      Exception occurs during the exportation of a query result to pdf
                 Bugster:     6729353
                 Issue:       2676
                 Review:      AP

LP-2008-07-22-0: Cleanup:     Removed sunsource.net link from SMF service template
                 Bugfix:      tr command has wrong replace arguments in some 
                              places
                 Bugfix:      Installation fails when another cluster already uses
                              RC scripts on Linux
                 Bugster:     6728406, 6727751
                 Review:      MD, AP

JO-2008-07-10-0: Bugfix:      PDF output does not span over multiple pages
                 Bugster:     6254027
                 Issue:       2649
                 Bugfix:      arcorun: Unexpected Error: Could not load the translet class 'GregorSamsa'
                 Bugster:     6254021
                 Issue:       2648
                 Review:      AP  

AP-2008-07-09-0: Bugfix:      dbw install parameters are not verified
                              removed no longer existing SourceSmfSupport function
                 Bugster:     6713362
                 Issue:       2642
                 Review:      JO

RD-2008-07-07-0: Cleanup:     corrected the man page when build without catman
                 Review:      AA

JO-2008-06-19-0: Bugfix:      Wallclock_Time query should be more constrained
                 Bugster:     6715561
                 Issue:       2620