@@ -64,7 +64,7 @@ SetUpInfoText
 #     - SWC version                 $SWC_VERSION
 #     - 3.0 version:    wcadmin     $WCADMIN
 #                       smwebapp    $SMWEBAPP
-# If any of required information is not found, or SWC version is not 
+# If any of required information is not found, or SWC version is not
 # supported, installation of ARCo reporting fails.
 # The list of supported SWC versions: 3.0
 # Supported architectures: solaris, linux
@@ -77,7 +77,7 @@ querySWCInfo() {
       exit 1
    fi
    SWC_VERSION=`getSWCVersion`
-   
+
    case $SWC_VERSION in
      "3.0" | "3.1")
         AS_USER_OPTION=" -u ";
@@ -224,7 +224,7 @@ queryParams() {
 
    $INFOTEXT "\nIn the spool directory the @@GRID_ENGINE_NAME@@ reporting module will"
    $INFOTEXT "store all queries and results\n"
-  
+
    dummy=$SPOOL_DIR
    $INFOTEXT -n "Enter the path to the spool directory [$dummy] >> "
    SPOOL_DIR=`Enter $dummy`
@@ -258,9 +258,9 @@ queryParams() {
      eval DB_DRIVER_$j="$DB_DRIVER"
      eval DB_CLUSTER_$j="$DB_CLUSTER"
      eval DB_PW_$j="$DB_PW"
-     
+
      CLUSTERS="$CLUSTERS $j"
-      
+
      $INFOTEXT -ask y n -def n \
                -n "Do you want to add another cluster? (y/n) [n] >>"
         if [ $? -ne 0 ]; then
@@ -313,7 +313,7 @@ queryCluster() {
          DB_TYPE="mysql"
          queryMysql 1
      fi
-     
+
      queryDBSchema 1
      dummy=${DB_HOST}:${DB_NAME}:${DB_USER}
      $INFOTEXT -n "\nEnter the name of your cluster "
@@ -339,7 +339,7 @@ queryCluster() {
 
      testDB
      if [ $? -eq 0 ]; then
-        $INFOTEXT -wait -n "\nHit <RETURN> to continue >> "           
+        $INFOTEXT -wait -n "\nHit <RETURN> to continue >> "
         $CLEAR
         $INFOTEXT -u "\nDB parameters are now collected"
 
@@ -371,7 +371,7 @@ removeOld() {
 
   for name in $names; do
      dummy=`$WCADMIN list -a | grep "$name" | awk '{print $1}'`
-    
+
      if [ "$dummy" != "" ]; then
         app="$app $dummy"
      fi
@@ -451,9 +451,9 @@ createSpoolDir() {
    else
       $INFOTEXT "query directory $QUERY_DIR already exists"
    fi
-   
+
    $INFOTEXT "Copy examples queries into $QUERY_DIR"
-   
+
    if [ $DB_DRIVER = "oracle.jdbc.driver.OracleDriver" ]; then
       PREDEFINED_DIR=$ORGPWD/database/example_queries/oracle
    elif [ $DB_DRIVER = "org.postgresql.Driver" ]; then
@@ -461,7 +461,7 @@ createSpoolDir() {
    elif [ $DB_DRIVER = "com.mysql.jdbc.Driver" ]; then
       PREDEFINED_DIR=$ORGPWD/database/example_queries/mysql
    fi
-   
+
    query_ask="y"
    dummy="n"
    result=""
@@ -657,10 +657,10 @@ importConsoleFiles() {
       else
          $INFOTEXT "Imported files to $INSTALL_DIR"
       fi
-      
+
       # create the product images
       PROD_RESULT=`ExecuteAsAdmin $SMWEBAPP prodname -t all -d $INSTALL_DIR`
-      
+
       if [ $? -ne 0 ]; then
          $INFOTEXT "FAILED"
          echo $PROD_RESULT
@@ -764,6 +764,8 @@ done
 $CLEAR
 removeOld
 
+verifyFilePermissions $SGE_ROOT/reporting
+
 $CLEAR
 createSpoolDir
 
@@ -788,7 +790,7 @@ if [ -d $TMP_INST_DIR/reporting ]; then
        if [ $? -eq 0 ]; then
          $INFOTEXT "directory $TMP_INST_DIR/reporting removed"
        else
-         $INFOTEXT "Can not remove directory $TMP_INST_DIR/reporting" 
+         $INFOTEXT "Can not remove directory $TMP_INST_DIR/reporting"
          exit 1
       fi
    fi
